<resources>
    <string name="app_name">SqliteDB20211219</string>
    <string name="CustomerName">Customer Name</string>
    <string name="Age">Age</string>
    <string name="ActiveCustomer">Active Customer</string>
    <string name="ButtonViewAll">View All Data</string>
    <string name="Add">Add Data</string>
    <string name="Update">Update Data</string>
    <string name="StudentName">Student Name</string>
</resources>